fixed the blog-home page padding from 5px 0 to 20px 0, completed the home page and align the contact section text to the left.

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,24 +154,41 @@ nav {
     height: 500px;
 }
 
-.home-blog-news-container h2 {
+.home-blog-news-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.news-container {
+    width: 66%;
+}
+
+.news-container h2 {
     font-size: 1.5em;
     font-weight: lighter;
 }
 
-.home-news-container {
-    display: flex;
-    justify-content: space-between;
+.news-container div {
+    display: inline-flex;
+    width: 49%;
 }
 
-.home-news-container div {
-    width: 32%;
+.latest-posts {
+    width: 33%;
 }
 
-.home-blog-sm-container {
-    border: 2px solid black;
+.latest-posts h2 {
+    font-size: 1.5em;
+    font-weight: lighter;
+}
+
+.latest-posts div {
+    border: 1px solid black;
     height: 300px;
 }
+
+
 
 /*--------------------------------------------------------------
 ## Hero-image
@@ -209,15 +226,15 @@ nav {
 
 .blog-container {
     width: 33%;
-    padding: 5px 0;
+    padding: 20px 0;
 }
 
 .blog-img-container {
     width: 100%;
     height: 250px;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
 
@@ -404,19 +421,18 @@ nav {
 .contact-text-header {
     font-size: 1.6em;
     font-weight: lighter;
-    text-align: center;
+    text-align: left;
 }
 
 .contact-container div p {
     font-size: 1.2em;
-    text-align: center;
+    text-align: left: 
 }
 
 .contact-button {
     border: 0;
     width: 50%;
     height: 30px;
-    margin: 0 auto;
     display: block;
     border-radius: 40px;
     color: #fff;
